--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel": "^6.1.18",
     "babel-loader": "^6.2.0",
     "express": "^4.13.3",
-    "uglify-js": "^2.6.1"
+    "uglify-js": "^2.6.1",
+    "webpack": "^1.12.6",
+    "webpack-dev-server": "^1.12.1"
   }
 }
