--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/photomask.js",
   "scripts": {
     "test": "gulp test",
+    "build": "gulp build",
     "start": "node example/server/default.js"
   },
   "repository": {
