--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "photomask",
+  "version": "0.1.3",
   "description": "Apply an alpha mask to your text using SVG and CSS mask-mode with custom font support.",
   "main": "dist/photomask.js",
   "authors": [
