Added 'before_deploy' hook for cleanup

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ sudo: false
 
 script:
   - npm install
+  - bower install
   - npm run build
+
+before_deploy:
+  - npm run cleanup
 
 deploy:
   provider: heroku
