--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "photomask",
   "version": "0.1.3",
-  "description": "Apply an alpha mask to your text using SVG and CSS mask-mode with custom font support.",
+  "description": "Apply an alpha mask to your text using SVG and CSS with custom font support and fine-tuning.",
   "main": "dist/photomask.js",
   "authors": [
     "Adam Timberlake <adam.timberlake@gmail.com>"
