--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "photomask",
   "version": "0.1.3",
-  "description": "Apply an alpha mask to your text using SVG and CSS mask-mode with custom font support.",
+  "description": "Apply an alpha mask to your text using SVG and CSS with custom font support and fine-tuning.",
   "main": "dist/photomask.js",
   "scripts": {
     "test": "gulp test",
     "build": "gulp build",
-    "start": "node example/server/default.js"
+    "start": "node example/server/default.js",
+    "cleanup": "rimraf node_modules"
+  },
+  "engines": {
+    "node": "4.1.1"
   },
   "repository": {
     "type": "git",
@@ -36,6 +40,7 @@
     "angular": "^1.4.8",
     "babel-eslint": "^4.1.5",
     "babelify": "^6.4.0",
+    "bower": "^1.6.5",
     "browserify": "^11.2.0",
     "eslint-config-airbnb": "^1.0.0",
     "express": "^4.13.3",
@@ -43,6 +48,7 @@
     "gulp-eslint": "^1.1.0",
     "gulp-karma": "0.0.5",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.4.2"
+    "gulp-uglify": "^1.4.2",
+    "rimraf": "^2.4.4"
   }
 }
